[package]
name = "rust-gui"
vesrion = "0.1.0"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Rust GUI Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/rust-gui/"
documentation = "http://docs.rs/create/rust-gui/"
keywords = ["sdl", "sdl2", "gui", "rust"]
categories = ["gui", "graphics", "visualization"]
include = [
    "**/*.rs",
    "Cargo.toml",
}

[lib]
name = "rust-gui"
path = "src/lib.rs"

[dependencies.sdl2]
version = "^0.34"
features = ["ttf", "image", "unsafe_textures"]

